--- a/Frontend/src/style.scss
+++ b/Frontend/src/style.scss
@@ -1,13 +1,12 @@
 body{
-  background-color: #f2f2f2;
-}
-.student-dashboard{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  
+  background-color: #f2f2f2;
+}
+.student-dashboard{
 
   .nav-bar {
     position: -webkit-sticky;
@@ -57,7 +56,7 @@ body{
       position: absolute;
       right: 0;
       text-align: center;
-      width: 60px;
+      min-width: 60px;
       height: 60px;
       border-radius: 50%;
       border: 2px solid white;
@@ -87,21 +86,34 @@ body{
       position: absolute;
       right: 0;
       background-color: #f9f9f9;
-      width: 150px;
+      min-width: 150px;
       font-size: 20px;;
       box-shadow: 0px 8px 16px 3px rgba(0, 0, 0, 0.2);
     }
 
     // Dropdown anchor links
-    .d-a {
+    .d-link {
       color: black;
       padding: 12px 16px;
       text-decoration: none;
       display: block;
       cursor: pointer;
+      font-size:20px;
 
       &:hover {
         background-color: rgb(0, 180, 180);
+      }
+    }
+    .d-info {
+      color: black;
+      padding: 12px 16px;
+      text-decoration: none;
+      display: block;
+      cursor: pointer;
+      font-size:20px;
+
+      &:hover {
+        cursor: text;
       }
     }
   }
@@ -134,8 +146,8 @@ body{
         padding:10px;
 
         &:hover{
-          background-color: black;
-          color:white;
+          background-color: white;
+          color:blue;
           cursor: pointer;
         }
       }
@@ -182,7 +194,6 @@ body{
       box-shadow: 0px 8px 16px 3px rgba(0, 0, 0, 0.2);
     }
   }
-
   .announcements {
     background-color: white;
     border: 1px solid #ddd;
@@ -194,6 +205,15 @@ body{
   }
   .announcement:last-child {
     margin-bottom: 0;
+  }
+
+  a{
+    text-decoration: none;
+    color: inherit;
+    box-shadow: none;
+    h3{
+      color: #0066cc;
+    }
   }
 }
 
